@@ -1,13 +1,17 @@
 package no.vegvesen.ixn.federation.capability;
 
-import no.vegvesen.ixn.federation.model.*;
+import no.vegvesen.ixn.federation.model.LocalSubscription;
+import no.vegvesen.ixn.federation.model.LocalSubscriptionStatus;
+import no.vegvesen.ixn.federation.model.RedirectStatus;
 import no.vegvesen.ixn.federation.model.capability.*;
 import org.assertj.core.util.Sets;
-import org.checkerframework.checker.units.qual.A;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -21,7 +25,7 @@ class CapabilityMatcherTest {
 					"NO00000-quad-tree-testing",
 					"NO",
 					"DENM:2.3.2",
-					List.of("1022133","1022330","102320","12003020","120030010","120012100","120030012","1023213000","1022303","12001030","12001032","1200201","12002310","12001023","12001220","12001022","12003002","12001222","120030222","120030220","12003000","12002031","12002033","12001021","12001020","1200212","1200213","1200210","1200211","1200013","12002303","120003","12002302","12001012","12002301","12002300","102322011","1023211","1023212","1023210","102231","102232","12001010","1200100","1200023","12001202","10223310","12002211","12001201","12001200","102303","102302"),
+					List.of("1022133", "1022330", "102320", "12003020", "120030010", "120012100", "120030012", "1023213000", "1022303", "12001030", "12001032", "1200201", "12002310", "12001023", "12001220", "12001022", "12003002", "12001222", "120030222", "120030220", "12003000", "12002031", "12002033", "12001021", "12001020", "1200212", "1200213", "1200210", "1200211", "1200013", "12002303", "120003", "12002302", "12001012", "12002301", "12002300", "102322011", "1023211", "1023212", "1023210", "102231", "102232", "12001010", "1200100", "1200023", "12001202", "10223310", "12002211", "12001201", "12001200", "102303", "102302"),
 					List.of(6)
 			),
 			new Metadata(RedirectStatus.OPTIONAL)
@@ -31,135 +35,114 @@ class CapabilityMatcherTest {
 	@Test
 	void denmCapabilitiesDoesNotMatchDatexSelector() {
 		DenmApplication denm_a_b_causeCode_1_2 = new DenmApplication("publ-id-1", "pub-123", "NO", "1.0", QUAD_TREE_0121_0122, List.of(6));
-		Capability capability = new Capability();
-		capability.setApplication(denm_a_b_causeCode_1_2);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		capability.setMetadata(meta);
+		NeighbourCapability capability = new NeighbourCapability(denm_a_b_causeCode_1_2,meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(capability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2'", "")), "");
 		assertThat(commonInterest).isEmpty();
 	}
 
 	@Test
 	void datexCapabilitiesMatchDatexSelector() {
 		DatexApplication datexApplication = new DatexApplication("publ-id-1", "pub-123", "NO", "1.0", QUAD_TREE_0121_0122, "SituationPublication", "publisherName");
-		Capability datexCapability = new Capability();
-		datexCapability.setApplication(datexApplication);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		datexCapability.setMetadata(meta);
+		NeighbourCapability datexCapability = new NeighbourCapability(datexApplication,meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2'", "")), "");
 		assertThat(commonInterest).isNotEmpty();
 	}
 
 	@Test
 	void datexCapabilitiesDoesNotMatchDatexSelectorOutsideQuadTree() {
 		DatexApplication datexApplication = new DatexApplication("publ-id-1", "pub-123", "NO", "1.0", QUAD_TREE_0121_0122, "SituationPublication", "publisherName");
-		Capability datexCapability = new Capability();
-		datexCapability.setApplication(datexApplication);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		datexCapability.setMetadata(meta);
+		NeighbourCapability datexCapability = new NeighbourCapability(datexApplication,meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2' and quadTree like '%,12234%'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2' and quadTree like '%,12234%'", "")), "");
 		assertThat(commonInterest).isEmpty();
 	}
 
 	@Test
 	void datexCapabilitiesMatchDatexSelectorInsideQuadTree() {
 		DatexApplication datexApplication = new DatexApplication("publ-id-1", "", "NO", "1.0", QUAD_TREE_0121_0122, "SituationBublication", "publisherName");
-		Capability datexCapability = new Capability();
-		datexCapability.setApplication(datexApplication);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		datexCapability.setMetadata(meta);
+		NeighbourCapability datexCapability = new NeighbourCapability(datexApplication,meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2' and quadTree like '%,012233%'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2' and quadTree like '%,012233%'", "")), "");
 		assertThat(commonInterest).isNotEmpty();
 	}
 
 	@Test
 	void datexCapabilitiesMatchDatexSelectorInsideQuadTreeLongerInFilter() {
 		DatexApplication datexApplication = new DatexApplication("publ-id-1", "pub-123", "NO", "1.0", QUAD_TREE_0121_0122, "SituationPublication", "publisherName");
-		Capability datexCapability = new Capability();
-		datexCapability.setApplication(datexApplication);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		datexCapability.setMetadata(meta);
+		NeighbourCapability datexCapability = new NeighbourCapability(datexApplication,meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2' and quadTree like '%,012100%'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2' and quadTree like '%,012100%'", "")), "");
 		assertThat(commonInterest).isNotEmpty();
 	}
 
 	@Test
 	void datexCapabilitiesMatchDatexSelectorInsideQuadTreeAndPublicationType() {
 		DatexApplication datexApplication = new DatexApplication("publ-id-1", "pub-123", "NO", "1.0", QUAD_TREE_0121_0122, "MeasuredDataPublication", "publisherName");
-		Capability datexCapability = new Capability();
-		datexCapability.setApplication(datexApplication);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		datexCapability.setMetadata(meta);
+		NeighbourCapability datexCapability = new NeighbourCapability(datexApplication,meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2' and quadTree like '%,012100%' and publicationType = 'MeasuredDataPublication'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2' and quadTree like '%,012100%' and publicationType = 'MeasuredDataPublication'", "")), "");
 		assertThat(commonInterest).isNotEmpty();
 	}
 
 	@Test
 	void datexCapabilitiesMatchDatexSelectorInsideQuadTreeAndOtherPublicationTypeDoesNotMatch() {
 		DatexApplication datexApplication = new DatexApplication("publ-id-1", "pub-213", "NO", "1.0", QUAD_TREE_0121_0122, "MeasuredDataPublication", "publisherName");
-		Capability datexCapability = new Capability();
-		datexCapability.setApplication(datexApplication);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		datexCapability.setMetadata(meta);
+		NeighbourCapability datexCapability = new NeighbourCapability(datexApplication,meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2' and quadTree like '%,012100%' and publicationType = 'Obstruction'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2' and quadTree like '%,012100%' and publicationType = 'Obstruction'", "")), "");
 		assertThat(commonInterest).isEmpty();
 	}
 
 	@Test
 	void datexCapabilitiesMatchDatexSelectorOutsideQuadTreeLongerInFilter() {
-		DatexApplication datexApplication = new DatexApplication("publ-id-1", "pub-123", "NO", "1.0", QUAD_TREE_0121_0122,"Obstruction", "publisherName");
-		Capability datexCapability = new Capability();
-		datexCapability.setApplication(datexApplication);
+		DatexApplication datexApplication = new DatexApplication("publ-id-1", "pub-123", "NO", "1.0", QUAD_TREE_0121_0122, "Obstruction", "publisherName");
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		datexCapability.setMetadata(meta);
+		NeighbourCapability datexCapability = new NeighbourCapability(datexApplication,meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'DATEX2' and quadTree like '%,121000%'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'DATEX2' and quadTree like '%,121000%'", "")), "");
 		assertThat(commonInterest).isEmpty();
 	}
 
 	@Test
 	void datexCapabilitiesMatchDatexSelectorInsideQuadTreeWithExtraWhitespace() {
 		DatexApplication datexApplication = new DatexApplication("publ-id-1", "pub-123", "NO", "1.0", QUAD_TREE_0121_0122, "Obstruction", "publisherName");
-		Capability datexCapability = new Capability();
-		datexCapability.setApplication(datexApplication);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		datexCapability.setMetadata(meta);
+		NeighbourCapability datexCapability = new NeighbourCapability(datexApplication,meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(datexCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED," \n\t\n\n messageType = 'DATEX2' and \tquadTree \r\n\t\n\n like \t\t '%,01210%'\r\n", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, " \n\t\n\n messageType = 'DATEX2' and \tquadTree \r\n\t\n\n like \t\t '%,01210%'\r\n", "")), "");
 		assertThat(commonInterest).isNotEmpty();
 	}
 
 	@Test
 	public void testDenmCapability() {
-		List<String> quadTreeTiles = new ArrayList<>();
-		quadTreeTiles.add("12004");
+		List<String> quadTreeTiles = List.of("12004");
 		DenmApplication application = new DenmApplication("NO-123",
 				"pub-123",
-				 "NO",
-				  "DENM:1.2.2",
-				   quadTreeTiles,
-				    List.of(6));
+				"NO",
+				"DENM:1.2.2",
+				quadTreeTiles,
+				List.of(6));
 
-		Capability capability = new Capability();
-		capability.setApplication(application);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		capability.setMetadata(meta);
+		NeighbourCapability capability = new NeighbourCapability(application,meta);
 
 		LocalSubscription subscription = new LocalSubscription(
 				52,
@@ -177,22 +160,22 @@ class CapabilityMatcherTest {
 
 	@Test
 	public void denmNonMatching() {
-        Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
-				Collections.singleton(new Capability(
-                        new DenmApplication("NO-123",
-                                "pub-123",
-                                "NO",
-                                "DENM:1.2.2",
-                                List.of("12004"),
-                                List.of(5)),
-                        new Metadata(RedirectStatus.OPTIONAL)
-                )),
+		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
+				Collections.singleton(new NeighbourCapability(
+						new DenmApplication("NO-123",
+								"pub-123",
+								"NO",
+								"DENM:1.2.2",
+								List.of("12004"),
+								List.of(5)),
+						new Metadata(RedirectStatus.OPTIONAL)
+				)),
 				Collections.singleton(new LocalSubscription(
-                        52,
-                        LocalSubscriptionStatus.CREATED,
-                        "(publisherId = 'NO-123') AND (quadTree like '%,12004%') AND (messageType = 'DENM') AND (causeCode = 6) AND (protocolVersion = 'DENM:1.2.2') AND (originatingCountry = 'NO')",
-                        ""
-                )),
+						52,
+						LocalSubscriptionStatus.CREATED,
+						"(publisherId = 'NO-123') AND (quadTree like '%,12004%') AND (messageType = 'DENM') AND (causeCode = 6) AND (protocolVersion = 'DENM:1.2.2') AND (originatingCountry = 'NO')",
+						""
+				)),
 				""
 		);
 		assertThat(commonInterest).isEmpty();
@@ -201,36 +184,34 @@ class CapabilityMatcherTest {
 	@Test
 	public void denmMatchesOneOfSeveral() {
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
-                Set.of(new Capability(
-                                new DenmApplication("NO-123",
-                                        "pub-123",
-                                        "NO",
-                                        "DENM:1.2.2",
-                                        List.of("12004"),
-                                        List.of(5, 6)),
-                                        new Metadata(RedirectStatus.OPTIONAL)
-                                )),
-                        Collections.singleton(new LocalSubscription(
-                                52,
-                                LocalSubscriptionStatus.CREATED,
-                                "(publisherId = 'NO-123') AND (quadTree like '%,12004%') AND (messageType = 'DENM') AND (causeCode = 6) AND (protocolVersion = 'DENM:1.2.2') AND (originatingCountry = 'NO')",
-                                ""
-                        )),
-                        ""
-                );
+				Set.of(new NeighbourCapability(
+						new DenmApplication("NO-123",
+								"pub-123",
+								"NO",
+								"DENM:1.2.2",
+								List.of("12004"),
+								List.of(5, 6)),
+						new Metadata(RedirectStatus.OPTIONAL)
+				)),
+				Collections.singleton(new LocalSubscription(
+						52,
+						LocalSubscriptionStatus.CREATED,
+						"(publisherId = 'NO-123') AND (quadTree like '%,12004%') AND (messageType = 'DENM') AND (causeCode = 6) AND (protocolVersion = 'DENM:1.2.2') AND (originatingCountry = 'NO')",
+						""
+				)),
+				""
+		);
 		assertThat(commonInterest).hasSize(1);
 	}
 
 	@Test
 	public void matchIviSelectorWithQuadTree() {
 		IvimApplication application = new IvimApplication("NO-12345", "pub-2131", "NO", "IVI:1.0", List.of("12004"));
-		Capability capability = new Capability();
-		capability.setApplication(application);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		capability.setMetadata(meta);
+		NeighbourCapability capability = new NeighbourCapability(application,meta);
 
 		String consumerCommonName = "";
-		LocalSubscription localSubscription = new LocalSubscription("originatingCountry = 'NO' and messageType = 'IVIM' and protocolVersion = 'IVI:1.0' and quadTree like '%,12004%' and iviType like '%,6,%'",consumerCommonName);
+		LocalSubscription localSubscription = new LocalSubscription("originatingCountry = 'NO' and messageType = 'IVIM' and protocolVersion = 'IVI:1.0' and quadTree like '%,12004%' and iviType like '%,6,%'", consumerCommonName, "IVIM sub");
 		CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(Sets.newHashSet(Collections.singleton(capability)), Sets.newHashSet(Collections.singleton(localSubscription)), consumerCommonName);
 	}
 
@@ -243,12 +224,10 @@ class CapabilityMatcherTest {
 				"SPATEM:1.0",
 				List.of("12003")
 		);
-		Capability capability = new Capability();
-		capability.setApplication(application);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		capability.setMetadata(meta);
+		NeighbourCapability capability = new NeighbourCapability(application,meta);
 		String consumerCommonName = "";
-		LocalSubscription localSubscription = new LocalSubscription("originatingCountry = 'NO' and messageType = 'SPATEM' and protocolVersion = 'SPATEM:1.0' and quadTree like '%,12003%' and id = 2 or id = 3",consumerCommonName);
+		LocalSubscription localSubscription = new LocalSubscription("originatingCountry = 'NO' and messageType = 'SPATEM' and protocolVersion = 'SPATEM:1.0' and quadTree like '%,12003%' and id = 2 or id = 3", consumerCommonName, "SPATEM SUB");
 		System.out.println(localSubscription.getSelector());
 		Set<LocalSubscription> localSubscriptions = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(Sets.newHashSet(Collections.singleton(capability)), Collections.singleton(localSubscription), consumerCommonName);
 		assertThat(localSubscriptions).isNotEmpty();
@@ -257,18 +236,16 @@ class CapabilityMatcherTest {
 	@Test
 	void camCapabilitiesMatchCamSelectorInsideQuadTreeAndStationType() {
 		CamApplication camApplication = new CamApplication("publ-id-1", "pub-1", "NO", "1.0", QUAD_TREE_0121_0122);
-		Capability camCapability = new Capability();
-		camCapability.setApplication(camApplication);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		camCapability.setMetadata(meta);
+		NeighbourCapability camCapability = new NeighbourCapability(camApplication,meta);
 		Set<LocalSubscription> commonInterest = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(
 				Sets.newLinkedHashSet(camCapability),
-				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED,"messageType = 'CAM' and originatingCountry = 'NO' and protocolVersion = '1.0' and quadTree like '%,0121%' and stationType = 'cyclist'", "")), "");
+				Sets.newLinkedHashSet(new LocalSubscription(LocalSubscriptionStatus.REQUESTED, "messageType = 'CAM' and originatingCountry = 'NO' and protocolVersion = '1.0' and quadTree like '%,0121%' and stationType = 'cyclist'", "")), "");
 		assertThat(commonInterest).isNotEmpty();
 	}
 
 	@Test
-	void mathcCapabilityWithSelectorOfOnlyOptionalField() {
+	void matchCapabilityWithSelectorOfOnlyOptionalField() {
 		SpatemApplication application = new SpatemApplication(
 				"NO-12345",
 				"pub-1",
@@ -276,12 +253,10 @@ class CapabilityMatcherTest {
 				"SPATEM:1.0",
 				List.of("12003")
 		);
-		Capability capability = new Capability();
-		capability.setApplication(application);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		capability.setMetadata(meta);
+		NeighbourCapability capability = new NeighbourCapability(application,meta);
 		String consumerCommonName = "";
-		LocalSubscription localSubscription = new LocalSubscription("name = 'fish'",consumerCommonName);
+		LocalSubscription localSubscription = new LocalSubscription("name = 'fish'", consumerCommonName, "fish sub");
 		System.out.println(localSubscription.getSelector());
 		Set<LocalSubscription> localSubscriptions = CapabilityMatcher.calculateNeighbourSubscriptionsFromSelectors(Sets.newHashSet(Collections.singleton(capability)), Collections.singleton(localSubscription), consumerCommonName);
 		assertThat(localSubscriptions).isNotEmpty();
@@ -290,135 +265,204 @@ class CapabilityMatcherTest {
 	@Test
 	void newMatchDenmCapabilityWithSelector() {
 		DenmApplication denm_a_b_causeCode_1_2 = new DenmApplication("publ-id-1", "pub-123", "NO", "DENM:1.2.2", QUAD_TREE_0121_0122, List.of(6));
-		Capability capability = new Capability();
-		capability.setApplication(denm_a_b_causeCode_1_2);
-		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		capability.setMetadata(meta);
 
+		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
 		String selector = "originatingCountry = 'NO' AND causeCode = 6 OR causeCode = 5";
 
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability, selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(denm_a_b_causeCode_1_2, selector, meta.getShardCount())).isTrue();
+	}
+
+	@Test
+	void matchShardedSelectorToShardedCapability() {
+		DenmApplication denm_a_b_causeCode_1_2 = new DenmApplication("publ-id-1", "pub-123", "NO", "DENM:1.2.2", QUAD_TREE_0121_0122, Collections.singletonList(6));
+		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
+
+		String selector = "originatingCountry = 'NO' AND causeCode = 6 OR causeCode = 5 AND shardId = 2";
+
+		assertThat(CapabilityMatcher.matchApplicationToSelector(denm_a_b_causeCode_1_2, selector, meta.getShardCount())).isFalse();
+	}
+
+	@Test
+	void shardedSubscriptionDoesNotMatchShardedCapability() {
+		DenmApplication denm_a_b_causeCode_1_2 = new DenmApplication("publ-id-1", "pub-123", "NO", "DENM:1.2.2", QUAD_TREE_0121_0122, Collections.singletonList(6));
+		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
+
+		String selector = "originatingCountry = 'NO' AND shardId = 2 AND (causeCode = 6 OR causeCode = 5)";
+
+		assertThat(CapabilityMatcher.matchApplicationToSelector(denm_a_b_causeCode_1_2, selector, meta.getShardCount())).isFalse();
 	}
 
 	@Test
 	@Disabled
 	void matchEmptyCauseCodeListWithSelectorContainingCauseCode() {
 		DenmApplication denm_a_b_causeCode_1_2 = new DenmApplication("publ-id-1", "pub-123", "NO", "DENM:1.2.2", QUAD_TREE_0121_0122, List.of());
-		Capability capability = new Capability();
-		capability.setApplication(denm_a_b_causeCode_1_2);
 		Metadata meta = new Metadata(RedirectStatus.OPTIONAL);
-		capability.setMetadata(meta);
+		Capability capability = new Capability(denm_a_b_causeCode_1_2,meta);
 
 		String selector = "originatingCountry = 'NO' AND causeCode = 5";
 
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability, selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(denm_a_b_causeCode_1_2, selector, meta.getShardCount())).isTrue();
 	}
 
 	@Test
 	public void findSubTile() {
 		String selector = "quadTree LIKE '%,12002010%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(quadTreeCoverageCapability, selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void findTinySubTile() {
 		String selector = "quadTree LIKE '%,120020100000000000%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(quadTreeCoverageCapability, selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void finSuperTile() {
 		String selector = "quadTree LIKE '%,12%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(quadTreeCoverageCapability, selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void FindTilesOutsideSubTile() {
 		String selector = "quadTree NOT LIKE '%,12002010%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(quadTreeCoverageCapability, selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void findTilesOutsideSuperTile() {
 		String selector = "quadTree NOT LIKE '%,12%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(quadTreeCoverageCapability, selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void findTilesOutsideSuperTileAlternateNegation() {
 		String selector = "NOT (quadTree LIKE '%,12%')";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(quadTreeCoverageCapability, selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void findTilesOutsideSuperTileAlternateNegationWithoutParentheses() {
 		String selector = "NOT quadTree LIKE '%,12%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(quadTreeCoverageCapability, selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
 	public void findTilesOutsideSuperTileNoMatch() {
 		String selector = "quadTree NOT LIKE '%,1%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(quadTreeCoverageCapability, selector)).isFalse();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isFalse();
 	}
 
 	@Test
 	public void unknownAndSuperTile() {
 		String selector = "fish = 'shark' AND quadTree NOT LIKE '%,1%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(quadTreeCoverageCapability, selector)).isFalse();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isFalse();
 	}
 
 	@Test
 	public void unknownOrSuperTile() {
 		String selector = "fish = 'shark' OR quadTree NOT LIKE '%,1%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(quadTreeCoverageCapability, selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(quadTreeCoverageCapability.getApplication(), selector, quadTreeCoverageCapability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
-	//This test needs to be altered when the matcher is working correctly, this is demonstrating a bug. Both should evaluate to false.
-	public void quadTreeTileWithNumberFourIsNotAllowed() {
+	public void missingPublisherName() {
 		Capability capability = new Capability(
-			new DenmApplication(
-					"NO00000",
-					"NO00000-quad-tree-testing",
-					"NO",
-					"DENM:2.3.2",
-					List.of("12004"),
-					List.of(6)
-			),
-			new Metadata(RedirectStatus.OPTIONAL)
-		);
-
-		String selector1 = "originatingCountry = 'NO' and messageType = 'DENM' and quadTree like '%,12004%' and causeCode = 6";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability, selector1)).isTrue();
-
-		String selector2 = "originatingCountry = 'NO' and messageType = 'DENM' and quadTree like '%,1200401%' and causeCode = 6";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability, selector2)).isFalse();
-	}
-
-	@Test
-	public void missingPublisherName(){
-		Capability capability = new Capability(
-				new DatexApplication("pub-1111", "NO-pub-1111","NO", "DATEX2:2.3", List.of("1"), "pub", null),
-				new Metadata()
+				new DatexApplication("pub-1111", "NO-pub-1111", "NO", "DATEX2:2.3", List.of("1"), "pub", null),
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
 		String selector1 = "originatingCountry = 'NO' and messageType = 'DATEX2'";
 		String selector2 = "originatingCountry='NO' and messageType = 'DATEX2' and publisherName = 'pub'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability, selector1)).isTrue();
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability, selector2)).isFalse();
+
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector1, capability.getMetadata().getShardCount())).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector2, capability.getMetadata().getShardCount())).isFalse();
 	}
 
 	@Test
-	public void publisherNameInCapability(){
+	public void publisherNameInCapability() {
 		Capability capability = new Capability(
-				new DatexApplication("pub-1111", "NO-pub-1111","NO", "DATEX2:2.3", List.of("1"), "pub", "NO-PUB"),
-				new Metadata()
+				new DatexApplication("pub-1111", "NO-pub-1111", "NO", "DATEX2:2.3", List.of("1"), "pub", "NO-PUB"),
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
 		String selector1 = "originatingCountry= 'NO' and messageType = 'DATEX2' and publisherName = 'NO-PUB'";
 		String selector2 = "originatingCountry = 'NO' and messageType = 'DATEX2' and publisherId = 'pub-1111'";
 
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability, selector1)).isTrue();
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability, selector2)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector1, capability.getMetadata().getShardCount())).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector2, capability.getMetadata().getShardCount())).isTrue();
+	}
+
+	@Test
+	public void matchShardedSubscriptionToCapability() {
+		Capability capability = new Capability(
+				new DenmApplication(
+						"NO00000",
+						"NO00000-quad-tree-testing",
+						"NO",
+						"DENM:2.3.2",
+						Collections.singletonList("12003"),
+						Collections.singletonList(6)
+				),
+				new Metadata(RedirectStatus.OPTIONAL)
+		);
+
+		String selector = "originatingCountry = 'NO' and messageType = 'DENM' and quadTree like '%,12003%' and causeCode = 6 and shardId = 2";
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isFalse();
+	}
+
+	@Test
+	public void matchUnshardedSubscriptionToShardedCapability() {
+		Metadata metadata = new Metadata(RedirectStatus.OPTIONAL,3);
+		Capability capability = new Capability(
+				new DenmApplication(
+						"NO00000",
+						"NO00000-quad-tree-testing",
+						"NO",
+						"DENM:2.3.2",
+						Collections.singletonList("12003"),
+						Collections.singletonList(6)
+				),
+				metadata
+		);
+
+		String selector = "originatingCountry = 'NO' and messageType = 'DENM' and quadTree like '%,12003%' and causeCode = 6";
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isTrue();
+	}
+
+	@Test
+	public void matchShardedSubscriptionToShardedCapabilityAndShardIdIsHigherOnSubscription() {
+		Metadata metadata = new Metadata(RedirectStatus.OPTIONAL,3);
+		Capability capability = new Capability(
+				new DenmApplication(
+						"NO00000",
+						"NO00000-quad-tree-testing",
+						"NO",
+						"DENM:2.3.2",
+						Collections.singletonList("12003"),
+						Collections.singletonList(6)
+				),
+				metadata
+		);
+
+		String selector = "originatingCountry = 'NO' and messageType = 'DENM' and quadTree like '%,12003%' and causeCode = 6 and shardId = 4";
+		assertThat(CapabilityMatcher.matchCapabilitiesToSelector(Collections.singleton(capability), selector)).hasSize(0);
+	}
+
+	@Test
+	public void capabilityIsNotAddedMultipleTimesWhenMatchingMultipleShardsInSelector() {
+		Metadata metadata = new Metadata(RedirectStatus.OPTIONAL,3);
+		Capability capability = new Capability(
+				new DenmApplication(
+						"NO00000",
+						"NO00000-quad-tree-testing",
+						"NO",
+						"DENM:2.3.2",
+						Collections.singletonList("12003"),
+						Collections.singletonList(6)
+				),
+				metadata
+		);
+
+		String selector = "originatingCountry = 'NO' and messageType = 'DENM' and quadTree like '%,12003%' and causeCode = 6 and (shardId = 2 OR shardId = 3)";
+		assertThat(CapabilityMatcher.matchCapabilitiesToSelector(Collections.singleton(capability), selector)).hasSize(1);
 	}
 
 	@Test
@@ -432,10 +476,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of(6)
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "messageType = 'DENM' and quadTree like '%,12%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability,selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
@@ -449,10 +494,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "messageType = 'DENM' and quadTree like '%,12300%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability,selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
@@ -466,10 +512,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "quadTree like '%,123%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability,selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
@@ -483,10 +530,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "quadTree not like '%,123%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability,selector)).isFalse();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isFalse();
 	}
 
 
@@ -501,10 +549,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "messageType = 'DENM' and quadTree not like '%,122%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability,selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
@@ -518,10 +567,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "messageType = 'DENM' and not (quadTree like '%,123%')";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability,selector)).isFalse();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isFalse();
 	}
 
 	@Test
@@ -535,10 +585,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "messageType = 'DENM' and not (quadTree like '%,124%')";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability,selector)).isTrue();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isTrue();
 	}
 
 	@Test
@@ -552,10 +603,11 @@ class CapabilityMatcherTest {
 						List.of("123"),
 						List.of()
 				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
+
 		String selector = "messageType = 'DENM' and quadTree not like '%,123%'";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability,selector)).isFalse();
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability.getApplication(), selector, capability.getMetadata().getShardCount())).isFalse();
 	}
 
 	@Test
@@ -570,31 +622,10 @@ class CapabilityMatcherTest {
 						List.of("122"),
 						List.of()
 				),
-				new Metadata()
-		);
-        assertThat(
-				CapabilityMatcher.matchCapabilityToSelector(
-						capability2,
-						"messageType = 'DENM' and not (quadTree like '%,123%,') and not (quadTree like '%,122%,')"
-				)).isFalse();
-	}
-
-	@Test
-	public void mathcAgainstSubTile() {
-		Capability capability1 = new Capability(
-				new DenmApplication(
-						"NO-123",
-						"NO-123:123",
-						"NO",
-						"1.0",
-						List.of("123"),
-						List.of()
-				),
-				new Metadata()
+				new Metadata(RedirectStatus.OPTIONAL)
 		);
 
-		String selector = "messageType = 'DENM' and not (quadTree like '%,1233%')";
-		assertThat(CapabilityMatcher.matchCapabilityToSelector(capability1,selector)).isTrue();
+		String selector = "messageType = 'DENM' and not (quadTree like '%,123%,') and not (quadTree like '%,122%,')";
+		assertThat(CapabilityMatcher.matchApplicationToSelector(capability2.getApplication(), selector, capability2.getMetadata().getShardCount())).isFalse();
 	}
-
 }
